# python-finance-plot

./: README.md  candle-plot.py  macd.py  pyproject.toml  python_finance_plot.py  requirements.txt
.github/workflows/: pipeline.yml
