[tool.poetry]
# Packaging information
name = "python-finance-plot"
version = "0.1.0"
description = "Sample application of financial plotting with Python"
authors = ["Danilo Pianini <danilo.pianini@unibo.it>"]
license = "MIT"

[tool.poetry.dependencies]
# Dependencies
python = "^3.9.0"
matplotlib = "3.5.1"
pandas_ta = "0.3.14.b"
pip = "22.0.4"
pyqt5 = "5.15.6"
yfinance = "0.1.70"

[tool.poetry.dev-dependencies]

[build-system]
# Implementation details
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
